--- a/Order_summary_challenge/order-summary-component-main/index.html
+++ b/Order_summary_challenge/order-summary-component-main/index.html
@@ -1,37 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Order summary card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Order summary card</title>
 
-  Order Summary
+    <!-- Feel free to remove these styles or customize in your own stylesheet 👍 -->
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
+  <body>
+    <div class="container">
+      <article class="order">
+        <header>
+          <img
+            class="order-summary-logo"
+            src="images/illustration-hero.svg"
+            alt="a yong man listens to music"
+          />
+          <h1 class="order-summary-heading">Order Summary</h1>
+        </header>
 
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
+        <p class="description">
+          You can now listen to millions of songs, audiobooks, and podcasts on
+          any device anywhere you like!
+        </p>
+        <div class="plan-container">
+          <img
+            class="music-icon"
+            src="images/icon-music.svg"
+            alt="an icon resamples music"
+          />
+          <div class="plan">
+            <p class="plan-type">Annual Plan</p>
+            <p class="plan-price">$59.99/year</p>
+          </div>
+          <a class="change" href="#">Change</a>
+        </div>
 
-  Annual Plan
-  $59.99/year
+        <button class="payment">Proceed to Payment</button>
+        <button class="cancel">Cancel Order</button>
 
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <footer class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Mo Salem</a>.
+        </footer>
+      </article>
+    </div>
+  </body>
 </html>
