--- a/Order_summary_challenge/order-summary-component-main/index-desktop.html
+++ b/Order_summary_challenge/order-summary-component-main/index-desktop.html
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | Order summary card</title>
 
     <!-- Feel free to remove these styles or customize in your own stylesheet 👍 -->
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/style-desktop.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
