Order Summary Component: fix accessibility warning all page content should be contained by landmarks

--- a/Order_summary_challenge/order-summary-component-main/index-desktop.html
+++ b/Order_summary_challenge/order-summary-component-main/index-desktop.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <article class="order">
         <header>
           <img
@@ -58,6 +58,6 @@
           >. Coded by <a href="#">Mo Salem</a>.
         </footer>
       </article>
-    </div>
+    </main>
   </body>
 </html>
